--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ defaults:
   values:
     layout: default
 - scope:
-  path: "/google1e027241d812a8ed.html"
+  path: "google1e027241d812a8ed.html"
 values:
   sitemap: false
 plugins:
