--- a/_config.yml
+++ b/_config.yml
@@ -5,16 +5,17 @@ email: ''
 description: Webアプリ開発が大好きな学生、やまだけんいちのホームページです。
 baseurl: ''
 url: https://r-40021.github.io/
+plugins:
+- jekyll-feed
+- jekyll-menus
+- jekyll-sitemap
+
 defaults:
 - scope:
     path: ''
   values:
     layout: default
-- scope:
-  path: "google1e027241d812a8ed.html"
-values:
-  sitemap: false
-plugins:
-- jekyll-feed
-- jekyll-menus
-- jekyll-sitemap
+  - scope:
+      path:    'google1e027241d812a8ed.html'
+    values:
+      sitemap: false
