--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,6 @@ defaults:
   values:
     layout: default
   - scope:
-      path:    "google1e027241d812a8ed.html"
+      path:    "/google1e027241d812a8ed.html"
     values:
       sitemap: false
