--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ defaults:
   values:
     layout: default
 - scope:
-      path:    "/google1e027241d812a8ed.html"
-    values:
-      sitemap: false
+    path: '/google1e027241d812a8ed.html'
+  values:
+    sitemap: false
       
 plugins:
 - jekyll-feed
