--- a/.forestry/front_matter/templates/full.yml
+++ b/.forestry/front_matter/templates/full.yml
@@ -6,7 +6,7 @@ fields:
   hidden: true
   label: block
   name: block
-  default: full-
+  default: full-1
 - type: textarea
   name: content
   label: Content
