--- a/.forestry/front_matter/templates/page-builder.yml
+++ b/.forestry/front_matter/templates/page-builder.yml
@@ -31,7 +31,7 @@ fields:
   - signup-bar
   - simple-footer
   - 4-column-footer
-  - full-width-html
+  - full-width
 pages:
 - browser.md
 - contact.md
