--- a/.github/workflows/purge-cache.yml
+++ b/.github/workflows/purge-cache.yml
@@ -16,7 +16,7 @@ jobs:
           GLOBAL_API_KEY: ${{ secrets.GLOBAL_API_KEY }}
           EMAIL_ADDRESS: ${{ secrets.EMAIL_ADDRESS }}
           
-        run: >
+        run: |
           curl -X DELETE "https://api.cloudflare.com/client/v4/zones/${ZONE_ID}/purge_cache"
             -H "X-Auth-Email: ${EMAIL_ADDRESS}"
             -H "X-Auth-Key: ${GLOBAL_API_KEY}"
