--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,16 @@ defaults:
     path: ''
   values:
     layout: default
+# Compress HTML
+compress_html:
+  clippings: all
+  comments: all
+  endings: all
+  ignore:
+    envs: []
+  blanklines: true
+  profile: false
+  startings: []
 plugins:
 - jekyll-feed
 - jekyll-menus
