Format word style

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: カエルアプリ工房
 author: Frog
 email: ''
-description: Webアプリを開発している、カエルアプリ工房です。
+description: ウェブアプリを開発している、カエルアプリ工房です。
 baseurl: ''
 url: https://www.frogapp.net/
 defaults:
